--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,7 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
