Mejorados los formularios. Añadida la libreria JCalendar (hace falta volver a hacer lo de "gradlew eclipse") para poder usar un widget para escoger la fecha.

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'jdbc:jdbc:2.0'
     compile 'com.h2database:h2:1.4.192'
+    compile 'com.toedter:jcalendar:1.4'
 }
 
 task wrapper(type: Wrapper) {
